Fixed more spacing

--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ h1 {
   font-family: "Inter", sans-serif;
 }
 .navbar-brand {
+  padding-left: 1em;
   font-family: "Barlow", sans-serif;
   font-weight: 1000;
   letter-spacing: -0.5px;
@@ -698,9 +699,8 @@ body {
   flex-direction: column;
   align-items: center;
   font-size: 1em;
-  padding: 2em;
-  
   padding: 20em 2em;
+  padding-top: 10em;
   gap: 3em;
   text-align: center;
   justify-content: center;
